# Code_Kowlege_Graph

./: .coverage  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
src/pyknp/: __init__.py  app.py
src/pyknp/api/: __init__.py  routes.py
src/pyknp/frontend/: app.js  index.html  style.css
src/pyknp/model/: __init__.py  edge.py  function.py  graph_payload.py  run.py  tag.py  tag_evidence.py
src/pyknp/pipeline/: __init__.py  orchestrator.py
src/pyknp/pipeline/ast/: __init__.py  ast.py
src/pyknp/pipeline/calculation/: __init__.py  calculation.py
src/pyknp/pipeline/graph/: __init__.py  graph.py
src/pyknp/pipeline/resolve/: __init__.py  resolve.py
src/pyknp/pipeline/tagging/: __init__.py  tagging.py
src/pyknp/rules/: __init__.py  base.py  compute_heavy.py  database.py  filesystem.py  fixture.py  http_endpoint.py  network.py  property_rule.py  subprocess_rule.py
src/pyknp/storage/: __init__.py  run_store.py
tests/: __init__.py  conftest.py
tests/api/: test_routes.py
tests/e2e/: __init__.py  test_pipeline_e2e.py
tests/e2e/golden/: sample_project.json
tests/fixtures/sample_project/: pyproject.toml
tests/integration/: __init__.py  test_pipeline_integration.py
tests/rules/: test_fixture.py  test_http_endpoint.py  test_network.py  test_property_rule.py  test_registry.py
tests/storage/: test_run_store.py
tests/unit/: test_ast.py  test_ast_edge_cases.py  test_calculation.py  test_coverage_gaps.py  test_graph.py  test_models.py  test_orchestrator.py  test_resolve.py  test_tag.py  test_tagging.py
(+11 files in other folders)
