[project]
name = "pyknp"
version = "0.1.0"
description = "Python knowledge graph analysis platform"
requires-python = "==3.12.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.10",
    "tree-sitter>=0.24",
    "tree-sitter-python>=0.23",
    "jedi>=0.19",
    "networkx>=3.4",
    "python-multipart>=0.0.20",
    # networkx 3.4+ 的 nx.pagerank 默认 dispatch 到 scipy 实现，需 numpy + scipy；
    # 否则在 pagerank 调用处会 ModuleNotFoundError。详见 review R1 Minor-5。
    "numpy>=2.4.6",
    "scipy>=1.17.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-regressions>=2.5",
    "httpx>=0.28",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyknp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true

# 第三方库未提供 py.typed 标记，忽略缺失 stub
[[tool.mypy.overrides]]
module = ["jedi", "networkx", "tree_sitter", "tree_sitter_python"]
ignore_missing_imports = true
